[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://KennyMiniSquare.tres" type="DynamicFont" id=2]
[ext_resource path="res://ALL_PLAYER.png" type="Texture" id=3]
[ext_resource path="res://Coin_Animation.png" type="Texture" id=4]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasUI" type="CanvasLayer" parent="."]

[node name="CoinUI" type="Control" parent="CanvasUI"]

[node name="CoinCount" type="Label" parent="CanvasUI/CoinUI"]
anchor_bottom = 0.404
margin_left = 21.0
margin_right = 137.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Hi, I am a label"

[node name="Coin" type="Sprite" parent="CanvasUI/CoinUI"]
position = Vector2( 11, 11 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
hframes = 4

[node name="CoinTimer" type="Timer" parent="CanvasUI/CoinUI"]
wait_time = 2.5
one_shot = true

[node name="DeathUI" type="Control" parent="CanvasUI"]

[node name="DeathSkull" type="Sprite" parent="CanvasUI/DeathUI"]
position = Vector2( 309, 11 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
hframes = 16
vframes = 3
frame = 5

[node name="DeathCount" type="Label" parent="CanvasUI/DeathUI"]
margin_left = 183.0
margin_right = 299.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Hi, I am a label"
align = 2

[node name="DeathTimer" type="Timer" parent="CanvasUI/DeathUI"]
wait_time = 2.5
one_shot = true
